# licenta

./: .gitignore  pyproject.toml  requirements-snapshot.txt
configs/: config.yaml  run_tb.yaml
configs/augmentation/: none.yaml  reidemeister_cached.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/dataset/: knots.yaml  knots_aug.yaml  knots_augmented.yaml
configs/evaluator/: classification.yaml
configs/hparams_search/: optuna.yaml
configs/logger/: tensorboard.yaml
configs/loss/: classification.yaml
configs/model/: cin.yaml  cwn.yaml  gat.yaml  gcn.yaml  gin.yaml
configs/optimizer/: adam.yaml
configs/split/: five_random.yaml
configs/task/: alternating.yaml  arf.yaml  crossing_number.yaml  determinant.yaml  genus_3d.yaml  genus_4d.yaml  genus_4d_top.yaml  ozsvath_szabo_tau.yaml  rasmussen_s.yaml  signature.yaml  unknotting_number.yaml
configs/trainer/: lightning.yaml  supervised.yaml
configs/transforms/liftings/graph2cell/: knot_faces.yaml
invariant-prediction/: KnotGCN.py  config.py  data_augmentation.ipynb  data_utils.py  graph_utils.py  main.ipynb  training_utils.py
invariant-prediction/models/: KnotGAT.py  KnotGCN.py  KnotGIN.py
scripts/: local.sh  pod.sh  train_tb.py
src/data/: __init__.py  augmentation.py  augmented_dataset.py  dataset.py  graph.py  knot.py  loader.py  splitting.py
src/models/cellular/: KnotCIN.py
src/models/graph/: KnotGAT.py
src/training/: __init__.py
src/transforms/: graph2cell_face_lifting.py
src/utils/: instantiators.py
