[project]
name = "licenta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "google>=3.0.0",
    "hydra-core>=1.3",
    "ipykernel>=7.1.0",
    "mycolorpy>=1.5.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=2.0.0",
    "pygraphviz",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "snappy>=3.3.2",
    "snappy-manifolds>=1.4",
    "tensorboard>=2.20.0",
    "topomodelx",
    "toponetx>=0.2.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torchvision>=0.25.0",
]

[tool.uv.sources]
topomodelx = { git = "https://github.com/pyt-team/TopoModelX.git" }

[tool.uv]
override-dependencies = ["numpy>=2.4.2"]
